Use isTrue()/isFalse() instead of isEqualTo(true/false)
Also some minor code improvements and warning fixes.